// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the children inside it 1`] = `
<Fragment>
  <CustomHead />
  <div
    className="o-header"
  >
    <div
      className="o-header__top"
    >
      <div
        className="o-header__top-wrapper"
      >
        <Logo
          className="o-header__logo"
        />
        <span
          className="o-nav u-hidden-d"
        >
          <Connect(NavBar) />
        </span>
        <Link
          as="/account/myaccount"
          href="/account/login"
        >
          <div
            className="c-header__account"
          >
            <t
              className="c-header__account-image"
              src="/static/account-icon.svg"
            />
            <a
              as="/account/myaccount"
              href="/account/login"
            >
              Account
            </a>
          </div>
        </Link>
        <Connect(MiniBag) />
        <span
          className="c-header__search"
        >
          <SearchBar />
        </span>
      </div>
    </div>
    <span
      className="o-nav u-visible-d"
    >
      <Connect(NavBar) />
    </span>
  </div>
  <div
    className="o-body"
  >
    Content
  </div>
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</Fragment>
`;

exports[`renders the footer 1`] = `
<Fragment>
  <CustomHead />
  <div
    className="o-header"
  >
    <div
      className="o-header__top"
    >
      <div
        className="o-header__top-wrapper"
      >
        <Logo
          className="o-header__logo"
        />
        <span
          className="o-nav u-hidden-d"
        >
          <Connect(NavBar) />
        </span>
        <Link
          as="/account/myaccount"
          href="/account/login"
        >
          <div
            className="c-header__account"
          >
            <t
              className="c-header__account-image"
              src="/static/account-icon.svg"
            />
            <a
              as="/account/myaccount"
              href="/account/login"
            >
              Account
            </a>
          </div>
        </Link>
        <Connect(MiniBag) />
        <span
          className="c-header__search"
        >
          <SearchBar />
        </span>
      </div>
    </div>
    <span
      className="o-nav u-visible-d"
    >
      <Connect(NavBar) />
    </span>
  </div>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</Fragment>
`;

exports[`renders the header 1`] = `
<Fragment>
  <CustomHead />
  <div
    className="o-header"
  >
    <div
      className="o-header__top"
    >
      <div
        className="o-header__top-wrapper"
      >
        <Logo
          className="o-header__logo"
        />
        <span
          className="o-nav u-hidden-d"
        >
          <Connect(NavBar) />
        </span>
        <Link
          as="/account/myaccount"
          href="/account/login"
        >
          <div
            className="c-header__account"
          >
            <t
              className="c-header__account-image"
              src="/static/account-icon.svg"
            />
            <a
              as="/account/myaccount"
              href="/account/login"
            >
              Account
            </a>
          </div>
        </Link>
        <Connect(MiniBag) />
        <span
          className="c-header__search"
        >
          <SearchBar />
        </span>
      </div>
    </div>
    <span
      className="o-nav u-visible-d"
    >
      <Connect(NavBar) />
    </span>
  </div>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</Fragment>
`;

exports[`renders the navbar 1`] = `
<Fragment>
  <CustomHead />
  <div
    className="o-header"
  >
    <div
      className="o-header__top"
    >
      <div
        className="o-header__top-wrapper"
      >
        <Logo
          className="o-header__logo"
        />
        <span
          className="o-nav u-hidden-d"
        >
          <Connect(NavBar) />
        </span>
        <Link
          as="/account/myaccount"
          href="/account/login"
        >
          <div
            className="c-header__account"
          >
            <t
              className="c-header__account-image"
              src="/static/account-icon.svg"
            />
            <a
              as="/account/myaccount"
              href="/account/login"
            >
              Account
            </a>
          </div>
        </Link>
        <Connect(MiniBag) />
        <span
          className="c-header__search"
        >
          <SearchBar />
        </span>
      </div>
    </div>
    <span
      className="o-nav u-visible-d"
    >
      <Connect(NavBar) />
    </span>
  </div>
  <div
    className="o-body"
  />
  <div
    className="o-footer"
  >
    <Connect(Footer) />
  </div>
</Fragment>
`;
